# s21_decimal

C5-s21_decimal/src/: s21_header_carmelar.h  s21_help_functions_carmelar.c
src/: CMakeLists.txt  a.out  s21_another_functions.c  s21_arithmetic_operators.c  s21_comparison_operators.c  s21_convertors_and_parsers.c  s21_decimal.c  s21_decimal.h  s21_header.h  s21_help_functions.c  s21_help_functions_carmelar.c  test  test.c
src/s21_another_functions/: s21_truncate.c
src/s21_arithmetic_operators/: s21_add.c  s21_mul.c  s21_sub.c
src/s21_comparison_operators/: s21_is_equal.c  s21_is_greater.c  s21_is_greater_or_equal.c  s21_is_less.c  s21_is_less_or_equal.c  s21_is_not_equal.c
src/s21_convertors_and_parsers/: s21_from_float_to_decimal.c  s21_from_int_to_decimal.c
src/test.dSYM/Contents/Resources/DWARF/: test
src/test.dSYM/Contents/Resources/Relocations/aarch64/: test.yml
src/tests/: a.out  s21_decimal_tests.h  s21_main_test.c
src/tests/s21_comparison_operators_tests/: s21_from_float_to_decimal_test.c
